# elenctic

./: .gitignore  CHANGELOG.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
src/elenctic/: __init__.py  checks.py  cli.py  discovery.py  expectation.py  harness.py  program.py  query.py  registry.py  result.py  run.py  solvers.py  terms.py
tests/: conftest.py  test_checks_allbase.py  test_checks_optimal_query.py  test_checks_properties.py  test_cli.py  test_cli_strict.py  test_discovery.py  test_discovery_gates.py  test_discovery_hygiene.py  test_dual_use.py  test_expectation_collection.py  test_expectation_directive.py  test_expectation_parse.py  test_expectation_wellformed.py  test_field_compatibility.py  test_harness.py  test_keystone_properties.py  test_krbook_dogfood.py  test_optimizing_census.py  test_package.py  test_parser_properties.py  test_program.py  test_query_eval.py  test_query_parse.py  test_registry.py  test_result.py  test_run.py  test_smoke.py  test_solvers.py  test_terms.py
tests/krbook/encodings/cowardly/: cowardly.lp
tests/krbook/encodings/orphans/: orphans.lp
tests/krbook/encodings/tweety/: tweety.lp
tests/krbook/encodings/uncaring/: uncaring.lp
tests/spikes/: test_spikes.py
