[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elenctic"
version = "0.1.0"
description = "A declarative testing framework for Answer Set Programming."
readme = "README.md"
requires-python = ">=3.14"
# license: intentionally unset — deferred strategic decision (Gregory). Do not add one.
authors = [{ name = "Gregory Gelfond" }]
dependencies = ["clingo>=5.8"]  # honest runtime dep; clingo is on conda-forge AND PyPI (no PyPI-only dep, spec §7)

[project.optional-dependencies]
theory = ["clingcon>=5.2.1"]  # the theory fragment (@assign, CSP @count); conda-forge-primary

[project.scripts]
elenctic = "elenctic.cli:main"  # the standalone corpus runner (`elenctic <encodings> [cases]`)

[tool.hatch.build.targets.wheel]
packages = ["src/elenctic"]

[tool.ruff]
# Formatter is `ruff format` — black-compatible (Gregory: black, or ruff when it's installed).
# target-version is inferred from project.requires-python (>=3.14).
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# We deliberately use mathematical Unicode (⋂ ⋃ ⊆ ⊇ → ≤ ∅ ∈ …) as KR notation in
# comments and docstrings; the ambiguous-Unicode (homoglyph) rules would flag it.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# The package __init__ re-exports the curated API for static visibility (a TYPE_CHECKING block
# feeding the PEP 562 lazy resolver); those imports are intentional re-exports, not dead code.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --strict-markers --strict-config"
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_unreachable = true
strict_equality = true
files = ["src", "tests"]
exclude = ["tests/spikes/"]

[[tool.mypy.overrides]]
module = ["clingcon", "clingcon.*"]
ignore_missing_imports = true
