[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elenctic"
dynamic = ["version"]
description = "A declarative testing framework for Answer Set Programming."
readme = "README.md"
requires-python = ">=3.14"  # deliberate floor: load-bearing 3.14 idioms. Downstream users may
                            # target lower.
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gregory Gelfond" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = ["clingo>=5.8"]  # honest runtime dep; clingo is on conda-forge AND PyPI (no PyPI-only dep)

[project.optional-dependencies]
theory = ["clingcon>=5.2.1"]  # the theory fragment (@assign, CSP @count); conda-forge-primary

[project.scripts]
elenctic = "elenctic.cli:main"  # the standalone corpus runner (`elenctic <encodings> [cases]`)

[tool.hatch.version]
path = "src/elenctic/__init__.py"  # single source of truth for the version (read from __version__)

[tool.hatch.build.targets.wheel]
packages = ["src/elenctic"]

[tool.ruff]
# Formatter is `ruff format` — black-compatible.
# target-version is inferred from project.requires-python (>=3.14).
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# We deliberately use mathematical Unicode (⋂ ⋃ ⊆ ⊇ → ≤ ∅ ∈ …) as KR notation in
# comments and docstrings; the ambiguous-Unicode (homoglyph) rules would flag it.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# The package __init__ re-exports the curated API for static visibility (a TYPE_CHECKING block
# feeding the PEP 562 lazy resolver); those imports are intentional re-exports, not dead code.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --strict-markers --strict-config"
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_unreachable = true
strict_equality = true
files = ["src", "tests"]
exclude = ["tests/spikes/"]

[[tool.mypy.overrides]]
module = ["clingcon", "clingcon.*"]
ignore_missing_imports = true
